--- a/myPage.html
+++ b/myPage.html
@@ -27,7 +27,7 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/0DzlSU6CaW8?si=8IigBhLw0xVE5rmB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <br>
         <p>To bowl effectively, choose the right ball weight and stance, then take smooth steps forward and swing the ball in a controlled motion. Release it with a flick of the wrist towards your target on the lane, maintaining balance and follow-through. Practice regularly for accuracy and power.</p>
-        <img src="../assets/img/Bowling.jpg" alt="Bowling" width="300">
+        <img src="assets/img/Bowling.jpg" alt="Bowling" width="300">
         <br><br>
     <a href="https://bowling.byu.edu/pricing">BYU Bowling</a>
     <br><br>
